Fixed: overall layout spacings

--- a/themes/inbeat/assets/scss/pages/_cpm-calculator.scss
+++ b/themes/inbeat/assets/scss/pages/_cpm-calculator.scss
@@ -97,7 +97,13 @@ $pink: #B85172;
         }
     }
 }
-#cpm_calculator-section, #cpm_calculator-section-advance{
+#roas-calculator-section {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 96px;
+    gap:96px;
+}
+#cpm_calculator-section, #cpm_calculator-section-advance, #roas-calculator-section{
     position: relative;
     margin-top: 33px;
     // margin-top: 50px;
